--- a/AcunMedyaAkademiAgency/Views/AdminLayout/MessagePartial.cshtml
+++ b/AcunMedyaAkademiAgency/Views/AdminLayout/MessagePartial.cshtml
@@ -2,7 +2,7 @@
 <li class="nav-item dropdown d-none d-sm-flex">
     <a class="nav-link count-indicator dropdown-toggle" id="messageDropdown" href="#" data-toggle="dropdown">
         <i class="mdi mdi-email-outline"></i>
-        <span class="count count-varient2">5</span>
+        <span class="count count-varient2">@ViewBag.mesajsayisi</span>
     </a>
     <div class="dropdown-menu navbar-dropdown navbar-dropdown-large preview-list" aria-labelledby="messageDropdown">
         <h6 class="p-3 mb-0">Mesajlar</h6>
