--- a/AcunMedyaAkademiAgency/Views/AdminLayout/NavbarPartial.cshtml
+++ b/AcunMedyaAkademiAgency/Views/AdminLayout/NavbarPartial.cshtml
@@ -39,10 +39,11 @@
                 </a>
                 <div class="dropdown-menu navbar-dropdown w-100" aria-labelledby="profileDropdown">
                     <a class="dropdown-item" href="#">
-                        <i class="mdi mdi-cached mr-2 text-success"></i> Activity Log
+                        <i class="mdi mdi-cached mr-2 text-success"></i>
+                        Etkinlik Günlüğü
                     </a>
-                    <a class="dropdown-item" href="#">
-                        <i class="mdi mdi-logout mr-2 text-primary"></i> Signout
+                    <a class="dropdown-item" href="~/Login/AdminLogin">
+                        <i class="mdi mdi-logout mr-2 text-primary"></i> Çıkış Yap
                     </a>
                 </div>
             </li>
