--- a/AcunMedyaAkademiAgency/Views/AdminLayout/NotificationPartial.cshtml
+++ b/AcunMedyaAkademiAgency/Views/AdminLayout/NotificationPartial.cshtml
@@ -2,7 +2,7 @@
 <li class="nav-item dropdown">
     <a class="nav-link count-indicator dropdown-toggle" id="notificationDropdown" href="#" data-toggle="dropdown">
         <i class="mdi mdi-bell-outline"></i>
-        <span class="count count-varient1">7</span>
+        <span class="count count-varient1">@ViewBag.bildirimsayisi</span>
     </a>
     <div class="dropdown-menu navbar-dropdown navbar-dropdown-large preview-list" aria-labelledby="notificationDropdown">
         <h6 class="p-3 mb-0">Bildirimler</h6>
