--- a/AcunMedyaAkademiAgency/Views/Login/AdminLogin.cshtml
+++ b/AcunMedyaAkademiAgency/Views/Login/AdminLogin.cshtml
@@ -6,7 +6,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Login 05</title>
+    <title>Giriş</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -28,7 +28,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-7 col-lg-5">
                     <div class="wrap">
-                        <div class="img" style="background-image: url(/Templates/login-form-15/images/bg-1.jpg);"></div>
+                        <div class="img" style="background-image: url(https://assets.entrepreneur.com/content/3x2/2000/1598246497-shutterstock-390454498.jpg?format=pjeg&auto=webp);"></div>
                         <div class="login-wrap p-4 p-md-5">
                             <div class="d-flex">
                                 <div class="w-100">
