--- a/AcunMedyaAkademiAgency/Views/Service/ServiceList.cshtml
+++ b/AcunMedyaAkademiAgency/Views/Service/ServiceList.cshtml
@@ -31,7 +31,19 @@
                                 <td>@count</td>
                                 <td>@item.Title</td>
                                 <td><img src="@item.ImageUrl" style="width:75px;height:75px;" alt="Hizmet Görseli" /></td>
-                                <td>@item.Description</td>
+                                <td>
+                                    @{
+                                        var words = item.Description.Split(' ');
+                                        for (int i = 0; i < words.Length; i++)
+                                        {
+                                            @words[i] @(" ")
+                                            if ((i + 1) % 3 == 0)
+                                            {
+                                                <br />
+                                            }
+                                        }
+                                    }
+                                </td>
                                 <td><a class="btn btn-danger" href="/Service/DeleteService/@item.ServiceId"><i class="fa fa-trash"></i>Sil</a></td>
                                 <td><a class="btn btn-success" href="/Service/UpdateService/@item.ServiceId"><i class="fa fa-pencil"></i>Güncelle</a></td>
                             </tr>
